# c-c-exercise

./: Assignment.cpp  BST.h  CMPT135.cbp  CMakeCache.txt  CMakeLists.txt  Chatbot.h  CodeReview6.cpp  ConversionOperator.cpp  Dog.cpp  Exception.cpp  Main.cpp  Makefile  Pet.cpp  Points.cpp  Property.cpp  Recursion.cpp  Recursive.cpp  Rvalue Reference.cpp  Search.cpp  Stringable.cpp  Structural_Pattern.cpp  a.out  a1.cpp  a1.h  a2.cpp  a3  a3.cpp  a4  a4.cpp  a4.h  a5  a5.cpp  another.cpp  assigmnent-1.cpp  basic_structs.cpp  cmake_install.cmake  cmpt_error.h  cmpt_error.h.gch  color_point.cpp  constexpr.cpp  (+37 more)
challenge/: Challenge2 .cpp  appropriate_words.txt  bits_1000_500.txt  challenge.cpp  challenge1.cpp  challenge10.cpp  challenge3.cpp  challenge4.cpp  challenge5.cpp  challenge6.cpp  challenge7.cpp  challenge8.cpp  challenge9.cpp  expr_1000.txt  wordlist_repwords.txt
include/: Dog.h  Pet.h  Turtle.h
lib/: Awards.cpp  CMakeLists.txt  Hailstone.cpp  Makefile  Triangle.cpp  cmake_install.cmake
temp/: Avatar.cpp  Avatar.h  AvatarController.cpp  AvatarController.h  AvatarService.cpp  AvatarService.h
test/: Awards_test.cpp  CMakeLists.txt  CTestTestfile.cmake  Dummy.cpp  Hailstone_test.cpp  Makefile  MockTurtleTest.cpp  TriangleTest.cpp  cmake_install.cmake  test.cpp
test/lib/googlemock/: Makefile  cmake_install.cmake  gmock.cbp
test/lib/googlemock/gtest/: Makefile  cmake_install.cmake  gtest.cbp
